// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardSingleSetting renders correctly with title and children 1`] = `
<View
  style={
    {
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "paddingBottom": 17,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 17,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#F6F6F6",
        "borderBottomWidth": 1,
        "paddingBottom": 15,
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
        }
      }
    >
      Settings Title
    </Text>
  </View>
  <View
    style={
      {
        "paddingTop": 15,
      }
    }
  >
    <Text>
      Test Content
    </Text>
  </View>
</View>
`;

exports[`CardSingleSetting renders with a long title 1`] = `
<View
  style={
    {
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "paddingBottom": 17,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 17,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#F6F6F6",
        "borderBottomWidth": 1,
        "paddingBottom": 15,
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
        }
      }
    >
      This is a very long setting title that might wrap or cause layout issues
    </Text>
  </View>
  <View
    style={
      {
        "paddingTop": 15,
      }
    }
  >
    <Text>
      Content with long title
    </Text>
  </View>
</View>
`;

exports[`CardSingleSetting renders with complex children components 1`] = `
<View
  style={
    {
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "paddingBottom": 17,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 17,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#F6F6F6",
        "borderBottomWidth": 1,
        "paddingBottom": 15,
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
        }
      }
    >
      Complex Setting
    </Text>
  </View>
  <View
    style={
      {
        "paddingTop": 15,
      }
    }
  >
    <View>
      <Text>
        Nested content
      </Text>
    </View>
  </View>
</View>
`;

exports[`CardSingleSetting renders without children 1`] = `
<View
  style={
    {
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "paddingBottom": 17,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 17,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#F6F6F6",
        "borderBottomWidth": 1,
        "paddingBottom": 15,
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
        }
      }
    >
      Empty Setting
    </Text>
  </View>
  <View
    style={
      {
        "paddingTop": 15,
      }
    }
  />
</View>
`;
